@@ -1,3 +1,4 @@
+* Manage active field on search widget
 * Add position and length on list view
 * Reset record to its original state when discarding the popup window
 * Add support of expand attribute on group tag
